# sleigh-compiler

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: compiler.rs
src/ffi/: sys.rs
src/ffi/cpp/: bridge.cc  bridge.hh  error_handling.hh  slgh_compile.cc
tests/: Cargo.toml  sleigh-compiler.rs
