[package]
name = "sleigh-compiler"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/mnemonikr/sleigh-compiler"

# List includes to avoid including entire Ghidra submodule
include = [
    "/build.rs",
    "/src/*",
    "/ghidra/Ghidra/Features/Decompiler/src/decompile/cpp/*",
    "/ghidra/DISCLAIMER.md",
    "/ghidra/NOTICE",
    "/ghidra/LICENSE",
    "/ghidra/licenses/*",
]

[dependencies]
cxx = "1.0"
thiserror = "2.0"

[build-dependencies]
cxx-build = "1.0"
